<resources>
    <string name="app_name">Open Library</string>
    <string name="search_results">Search Results</string>
    <string name="book_details">Book Details</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="standard_error_message">The request failed. Please try again.</string>
    <string name="no_books_found_error_message">No Books Found</string>
    <string name="ok">Ok</string>

    <string name="search_box_hint">Enter a book title</string>
    <string name="return_to_search_screen">Return to book search screen</string>
    <string name="return_to_book_listing_screen">Return to book listing screen</string>
    <string name="book_cover">Book cover image</string>

    <string name="SEARCH_TEXT_TEST_TAG" translatable="false">SEARCHTEXT_TEST_TAG</string>
    <string name="ERROR_CONFIRMATION_BUTTON_TEST_TAG" translatable="false">ERROR_CONFIRMATION_BUTTON</string>
    <string name="BOOKS_LIST_BACK_BUTTON_TEST_TAG" translatable="false">BOOKS_LIST_BACK_BUTTON</string>
    <string name="BOOK_SEARCH_RESULT_TEST_TAG" translatable="false">BOOK_RESULT_IMAGE</string>
    <string name="BOOK_DETAILS_BACK_BUTTON_TEST_TAG" translatable="false">BOOK_DETAILS_BACK_BUTTON</string>
    <string name="BOOK_COVER_IMAGE_TEST_TAG" translatable="false">BOOK_COVER_IMAGE</string>
    <string name="ASYNC_BOOK_COVER_IMAGE_TEST_TAG" translatable="false">ASYNC_BOOK_COVER_IMAGE</string>
    <string name="DEFAULT_BOOK_COVER_IMAGE_TEST_TAG" translatable="false">DEFAULT_BOOK_COVER_IMAGE</string>
</resources>